--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -1,80 +1,105 @@
-{% extends "base.html" %}
+{% extends "base.html" %} {% block content %}
 
-{% block content %}
+<div
+	class="input-group form-group input-group-sm col-xs-12 col-md-6 col-md-offset-3">
+	<label id="question" for="question" class="top-buffer">Question</label>
+	<input id="answer" type="text" id="answer" name="answer"
+		class="form-control" placeholder="Answer" required autofocus>
 
-<div class="input-group form-group input-group-sm col-xs-12 col-md-6 col-md-offset-3">
-	 <label id="question" for="question" class="top-buffer">Question</label>
-        <input id="answer" type="text" id="answer" name="answer" class="form-control" placeholder="Answer" required autofocus>
+	<span class="col-xs-12 top-buffer"></span>
+	<div class="col-xs-6 col-xs-offset-3">
+		<button id="next-button" class="btn btn-lg btn-block btn-primary"
+			type="button">Next</button>
+	</div>
 
-		<span class="col-xs-12 top-buffer"></span>
-		<div class="col-xs-6 col-xs-offset-3">
-		<button id="next-button" class="btn btn-lg btn-block btn-primary" type="button">Next</button>
-		</div>
+	<div class="progress col-xs-12 triple-top-buffer">
+		<div id="progress-bar" class="progress-bar" role="progressbar"
+			aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"
+			style="width: 0%;">0%</div>
+	</div>
 
-<div class="progress col-xs-12 triple-top-buffer">
-<div id="progress-bar" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
-    0%
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Quiz results</h4>
+      </div>
+      <div class="modal-body">
+        Quiz results
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default">Main menu</button>
+        <button type="button" class="btn btn-primary">Restart quiz</button>
+      </div>
+    </div>
   </div>
 </div>
 
-</div>
-
-{% endblock %}
-
-{% block bottom %}
+{% endblock %} {% block bottom %}
 
 <span id="holder-dictionary" hidden="true">{{ dictionary }}</span>
 <span id="holder-questions" hidden="true">{{ questions }}</span>
 
-	<script>
+<script>
+	var data;
+	var answers;
+	var current = 0;
 
-    $('.progress-bar').css('width', 0+'%').attr('aria-valuenow', 0);
-    $('#progress-bar').text('0%');
+	function populateQuiz(quizData) {
+		$('#next-button').text('Next');
+		data = quizData;
+		answers = [];
+	}
 
-	$(document).ready(function() {
+	function setProgress(progress) {
+		$('.progress-bar').css('width', progress + '%').attr('aria-valuenow',
+				progress);
+		$('#progress-bar').text(progress + '%');
+	}
 
-		questions = $('#holder-questions').text();
-		serv_url = 'rest/dictionaries/' + $('#holder-dictionary').text();
+	function finishQuiz() {
+		$('#next-button').text('Results');
+		$('#myModal').modal('show');
+	}
 
-		$.ajax({
+	function askQuestion(questionNo) {
 
-	        url: serv_url
-	    }).then(function(data) {
-	    	alert(data.flashcards);
-	})});
+		var no_of_questions = data.length;
 
-    
-    var curr = 0;
-    
-    var questions = [
-    	{word:"car0", translation:"samochod", answered:null},
-    	{word:"car1", translation:"samochod", answered:null},
-    	{word:"car2", translation:"samochod", answered:null},
-    	{word:"car3", translation:"samochod", answered:null},
-    	{word:"car4", translation:"samochod", answered:null}
-    	];
-    var no_of_questions = questions.length;
-    
-    $('#question').text(questions[0].word);
-    	
-	$('#next-button').on('click', function (e) {
-
-		curr+=1;
-		if(curr >= no_of_questions){
-			progress = 100;
-		     $('.progress-bar').css('width', progress+'%').attr('aria-valuenow', progress);
-		     $('#progress-bar').text(progress + '%');
-
-			alert("END");
+		if (questionNo == no_of_questions) {
+			finishQuiz();
 			return;
 		}
+		current = questionNo;
+		progress = 100 * (current + 1) / no_of_questions;
+		setProgress(progress);
+		$('#question').text(data[current].word);
+	}
 
-		progress = 100 * curr / no_of_questions;
-	     $('.progress-bar').css('width', progress+'%').attr('aria-valuenow', progress);
-	     $('#progress-bar').text(progress + '%');
-	     $('#question').text(questions[curr].word);
+	function checkAnswer() {
+		answers[current] = (data[current].translation == $('#answer').val());
+	}
 
+	$(document).ready(function() {
+		setProgress(0);
+		questions = $('#holder-questions').text();
+		serv_url = 'rest/dictionaries/' + $('#holder-dictionary').text();
+		$.ajax({
+			url : serv_url
+		}).then(function(data) {
+			populateQuiz(data.flashcards);
+			askQuestion(0);
+		})
+	});
+
+	$('#next-button').on('click', function(e) {
+		checkAnswer();
+		askQuestion(current + 1);
 
 	})
-	</script>
+</script>
 {% endblock %}
