--- a/templates/base.html
+++ b/templates/base.html
@@ -47,8 +47,8 @@
 				<div class="collapse navbar-collapse"
 					id="bs-example-navbar-collapse-8">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="#">Home</a></li>
-						<li><a href="#">Settings</a></li>
+						<li class="active"><a href="index">Home</a></li>
+						<li><a href="settings">Settings</a></li>
 						<li><a href="#">About</a></li>
 					</ul>
 				</div>
