--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -17,7 +17,7 @@
     {% endif %}
 {% endif %}
 
-	 <label for="inputUsername" class="sr-only">User name</label>
+	 <label for="inputUsername" class="sr-only">User name2</label>
         <input type="text" id="id_username" name="username" class="form-control" placeholder="User name" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="id_password" name="password" class="form-control" placeholder="Password" required>
