settings->dict table

--- a/static/assets/css/signin.css
+++ b/static/assets/css/signin.css
@@ -53,3 +53,11 @@ body {
 	margin-top: 20px;
 	margin-bottom: 10px;
 }
+
+tr.dictTableRow { cursor: pointer; }
+
+table tr:nth-child(odd) td{
+	background-color: #AAAAFF;
+}
+table tr:nth-child(even) td{
+}
