--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,9 +1,8 @@
-{% extends "template.html" %}
+{% extends "base.html" %}
 {% block content %}
 {% if form.errors %}
 <h2 class="form-signin-heading">Your username and password didn't match. Please try again.</h2>
 {% endif %}
-
 
 <form class="form-signin" method="post" action="{% url 'login' %}">
 {% csrf_token %}
@@ -21,6 +20,12 @@
         <input type="text" id="id_username" name="username" class="form-control" placeholder="User name" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="id_password" name="password" class="form-control" placeholder="Password" required>
+
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" value="remember-me"> Remember me
+          </label>
+        </div>
 
 <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 <input type="hidden" name="next" value="{{ next }}" />
